Added unit test class and minor formatting fixes

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
 		    <artifactId>selenium-chrome-driver</artifactId>
 		    <version>3.141.59</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/spring-mock-mvc -->
+		<dependency>
+		    <groupId>io.rest-assured</groupId>
+		    <artifactId>spring-mock-mvc</artifactId>
+		    <version>3.0.0</version>
+		    <scope>test</scope>
+		</dependency>	
 	</dependencies>
 
 	<build>
